# patina-agent

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: cd.yml  ci.yml
examples/: stream_chat.rs
src/: constant.rs  gaia.rs  lib.rs  llm.rs  main.rs  models.rs
src/gaia/: dataset.rs  models.rs  solver.rs
src/llm/: complete.rs  semaphore.rs  stream.rs  structured.rs  structured_ds.rs
