[package]
name = "patina-agent"
version = "0.1.0"
edition = "2024"

[[example]]
name = "stream_chat"
path = "examples/stream_chat.rs"

[dependencies]
anyhow = "*"
async-openai = { version = "*", features = ["chat-completion"] }
async-stream = "*"
backon = "*"
dotenvy = "*"
futures = "*"
schemars = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tokio = { version = "*", features = ["full"] }
tracing = "*"
tracing-subscriber = "*"
