[package]
name = "patina-agent"
version = "0.1.0"
edition = "2024"
description = "Rust async AI Agent framework with structured output, streaming, retry and concurrency control"
license = "AGPL-3.0"
repository = "https://github.com/Cle2ment/patina-agent"
homepage = "https://github.com/Cle2ment/patina-agent"
keywords = ["ai", "agent", "llm", "openai", "async"]
categories = ["development-tools", "api-bindings"]

[[example]]
name = "stream_chat"
path = "examples/stream_chat.rs"

[dependencies]
anyhow = "*"
async-openai = { version = "*", features = ["chat-completion"] }
async-stream = "*"
backon = "*"
dotenvy = "*"
futures = "*"
schemars = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tokio = { version = "*", features = ["full"] }
tracing = "*"
tracing-subscriber = "*"
