[package]
name = "patina-agent"
version = "0.1.0"
edition = "2024"
description = "Rust async AI Agent framework with structured output, streaming, retry and concurrency control"
license = "AGPL-3.0"
repository = "https://github.com/Cle2ment/patina-agent"
homepage = "https://github.com/Cle2ment/patina-agent"
keywords = ["ai", "agent", "llm", "openai", "async"]
categories = ["development-tools", "api-bindings"]

[[example]]
name = "stream_chat"
path = "examples/stream_chat.rs"

[dependencies]
anyhow = "1.0"
async-openai = { version = "0.41", features = ["chat-completion"] }
async-stream = "0.3"
backon = "1.6"
dotenvy = "0.15"
futures = "0.3"
schemars = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
